[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/BattleArena.gd" type="Script" id=1]
[ext_resource path="res://scenes/Hero.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/music/fight music 1.mp3" type="AudioStream" id=4]

[node name="BattleArena" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Hero" parent="." instance=ExtResource( 2 )]
position = Vector2( 249, 196 )
scale = Vector2( 3.12952, 3.90132 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 764, 189 )

[node name="XpLabel" type="Label" parent="."]
margin_left = 88.0
margin_top = 466.0
margin_right = 128.0
margin_bottom = 480.0
text = "xp"

[node name="EnemyHealthLabel" type="Label" parent="."]
margin_left = 737.0
margin_top = 53.0
margin_right = 781.0
margin_bottom = 67.0
text = "enemy"

[node name="HeroHealthLabel" type="Label" parent="."]
margin_left = 244.0
margin_top = 54.0
margin_right = 284.0
margin_bottom = 68.0
text = "hero"

[node name="PromptLabel" type="Label" parent="."]
margin_left = 636.0
margin_top = 434.0
margin_right = 683.0
margin_bottom = 448.0
text = "prompt"

[node name="Timer" type="Timer" parent="."]

[node name="ItemButton" type="Button" parent="."]
margin_left = 273.0
margin_top = 374.0
margin_right = 346.0
margin_bottom = 413.0
custom_colors/font_color = Color( 0.0352941, 0.984314, 0.0784314, 1 )
text = "Item"

[node name="AttackButton" type="Button" parent="."]
margin_left = 116.0
margin_top = 373.0
margin_right = 194.0
margin_bottom = 414.0
custom_colors/font_color = Color( 0.972549, 0.0705882, 0.0705882, 1 )
text = "Attack"

[node name="AttackAnimationDelay" type="Timer" parent="."]
wait_time = 0.6

[node name="FightMusic1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="enemy_attack" from="." to="Enemy" method="_on_BattleArena_enemy_attack"]
[connection signal="enemy_setup" from="." to="Enemy" method="_on_BattleArena_enemy_setup"]
[connection signal="hero_attack" from="." to="Hero" method="_on_BattleArena_hero_attack"]
[connection signal="hero_default" from="." to="Hero" method="_on_BattleArena_hero_default"]
[connection signal="pressed" from="ItemButton" to="." method="_on_ItemButton_pressed"]
[connection signal="pressed" from="AttackButton" to="." method="_on_AttackButton_pressed"]
